feat: home page updates

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,38 +1,23 @@
-a {
-  text-decoration: none;
+.home {
+  text-align: center;
+  flex-direction: column;
+}
+.title {
+  font-weight: 400;
+}
+.description {
+  margin: 30px;
+}
+.collapse {
+  margin-top: 50px;
+}
+.el-image img {
+  width: 220px;
+  border-radius: 50%;
 }
 
-h1 {
-  font-family: Staatliches;
-  font-size: 120px;
-}
-
-#category {
-  font-family: Staatliches;
-  font-weight: 500;
-}
-
-#title {
-  letter-spacing: 0.4px;
-  font-size: 22px;
-  font-size: 1.375rem;
-  line-height: 1.13636;
-}
-
-#banner {
-  margin: 20px;
-  height: 800px;
-}
-
-#editor {
-  font-size: 16px;
-  font-size: 1rem;
-  line-height: 1.75;
-}
-
-.uk-navbar-container {
-  background: #fff !important;
-  font-family: Staatliches;
+.el-menu {
+  justify-content: center;
 }
 
 img:hover {
