--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,23 +1,45 @@
 .home {
   text-align: center;
   flex-direction: column;
-}
-.title {
-  font-weight: 400;
-}
-.description {
-  margin: 30px;
-}
-.collapse {
-  margin-top: 50px;
-}
-.el-image img {
-  width: 220px;
-  border-radius: 50%;
+  .avatar img {
+    width: 220px;
+    border-radius: 50%;
+  }
+  .title {
+    font-weight: 400;
+  }
+  .description {
+    margin: 30px;
+  }
+  .collapse-wrapper {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 600px;
+  }
+  .social-media {
+    margin-top: 10px;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    gap: 2px;
+    &-icon img {
+      width: 25px;
+      border-radius: 50%;
+      &:hover {
+        opacity: 0.6;
+      }
+    }
+  }
 }
 
-.el-menu {
-  justify-content: center;
+.el {
+  &-menu {
+    justify-content: center;
+  }
+  &-footer {
+    font-size: 12px;
+    text-align: center;
+  }
 }
 
 img:hover {
