feat: add three js background

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,3 +1,14 @@
+#app {
+  position: relative;
+  z-index: 2;
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+}
+canvas {
+  position: absolute;
+  top: 0;
+}
 .home {
   text-align: center;
   flex-direction: column;
@@ -7,6 +18,7 @@
   }
   .title {
     font-weight: 400;
+    color: rgba(255, 255, 255, 0.4);
   }
   .description {
     margin: 30px;
@@ -15,13 +27,20 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 600px;
+    * {
+      color: rgba(255, 255, 255, 0.4);
+    }
+    p {
+      padding: 0;
+      margin: 2px;
+    }
   }
   .social-media {
     margin-top: 10px;
     margin-bottom: 30px;
     display: flex;
     justify-content: center;
-    gap: 2px;
+    gap: 5px;
     &-icon img {
       width: 25px;
       border-radius: 50%;
@@ -35,10 +54,34 @@
 .el {
   &-menu {
     justify-content: center;
+    &-item {
+      color: rgba(255, 255, 255, 0.4) !important;
+    }
+    &--horizontal {
+      border: none;
+    }
   }
   &-footer {
     font-size: 12px;
     text-align: center;
+  }
+  &-collapse {
+    border: none !important;
+    &-item {
+      &__wrap {
+        background-color: rgba(0, 0, 0, 0.413) !important;
+        border-bottom-color: rgba(255, 255, 255, 0.566) !important;
+      }
+      &__header {
+        color: rgba(190, 187, 187, 0.667) !important;
+        border-bottom-color: rgba(255, 255, 255, 0.566) !important;
+        background-color: none !important;
+        background: none !important;
+      }
+      &__content {
+        margin-top: 20px;
+      }
+    }
   }
 }
 
