--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -1,5 +1,20 @@
 body {
   margin: 0;
+  .fade-enter-active {
+    transition: all 0.3s ease-out;
+    opacity: 0;
+  }
+
+  .fade-leave-active {
+    transition: all 0.3s;
+    opacity: 0;
+  }
+
+  .slide-fade-enter-from,
+  .slide-fade-leave-to {
+    transform: translateX(330px);
+    opacity: 0.9;
+  }
 }
 #app {
   position: relative;
